<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/totalModule" android:background="@drawable/black_gradient_click"  android:clickable="true" android:layout_width="match_parent" android:layout_height="45dp"
        android:weightSum="2"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_marginLeft="5dp"
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Total"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="18sp"
                android:padding="2dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvRs"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Rs"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="2dp" />

                <TextView
                    android:id="@+id/tvTotalAmount"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/tvRs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="2dp" />
                <ImageView
                    android:layout_gravity="center"
                    android:layout_marginLeft="2dp"
                    android:layout_toRightOf="@+id/tvTotalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_drop_down_white_18dp"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/subModule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/subtotalModule" android:background="@drawable/black_gradient_click"  android:clickable="true" android:layout_width="match_parent" android:layout_height="45dp"
            android:weightSum="2"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Total"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="2dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <LinearLayout
                    android:gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvSeRs"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Rs"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:padding="2dp" />

                    <TextView
                        android:id="@+id/tvSubTotalAmount"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/tvSeRs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:padding="2dp" />
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_marginLeft="2dp"
                        android:layout_toRightOf="@+id/tvTotalAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_drop_down_white_18dp"/>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout android:gravity="center" android:orientation="horizontal"
            android:layout_width="match_parent" android:layout_height="45dp"
            android:weightSum="2"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_marginLeft="5dp"
                    android:id="@+id/tvSubTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SubTotal"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="2dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <LinearLayout
                    android:gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvSubRs"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Rs"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:padding="2dp" />

                    <TextView
                        android:id="@+id/tvSubAmount"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/tvSubRs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginRight="5dp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal"
            android:layout_width="match_parent" android:layout_height="45dp"
            android:weightSum="2"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_marginLeft="5dp"
                    android:id="@+id/tvRounded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rounded"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:padding="2dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <LinearLayout
                    android:gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvro"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Plus"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:padding="2dp" />

                    <TextView
                        android:id="@+id/tvRoundVal"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/tvro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.00"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginRight="5dp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>